app/component/mobile-ticket-purchase-information.scss
@charset "UTF-8";

.itinerary-ticket-information-purchase {
  display: flex;
  color: $gray;
  font-weight: $font-weight-book;
  font-size: $font-size-small;
  margin: 0 10px;

  .ticket-type-agency-link {
    flex: 0;

    .external-link-container {
      width: 120px;
      text-align: center;
      border-radius: 23px;
      border: 1px solid #888;
      min-height: 26px;

      .external-link {
        font-weight: $font-weight-medium;
        color: $primary-color;
        padding-top: 3px;
        font-size: 13px;
      }

      &:hover {
        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
        cursor: pointer;
      }
    }

    @media print {
      display: none;
    }
  }

  .itinerary-pinfo-ticket-type {
    .ticket-type-title {
      color: #fff;
    }

    .app-link {
      .external-link-container {
        border: 0;
        line-height: 25px;

        a.external-link {
          font-size: 16px;
          color: $primary-color;
        }
      }

      margin-right: 16px;
      display: flex;
      justify-content: space-evenly;
      align-items: center;
      padding: 3px 10px 5px 10px;
      min-width: 10.9em;
      height: 2.4em;
      right: 15px;
      top: 25px;
      background: #fff;
      font-weight: $font-weight-medium;
      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
      border-radius: 20px;
    }

    border-radius: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-grow: 1;
    flex-shrink: 1;
    white-space: normal;
    line-height: 1.1;
    background-color: $primary-color;
    justify-content: space-between;

    .ticket-container {
      display: grid;
      align-items: center;
      justify-content: space-between;
      margin: 11px 6px 9px 15px;

      @include min-width(tablet) {
        margin-right: 15px;
      }
    }

    .ticket-type-zone {
      @include font-book;

      align-items: center;
      color: $gray;
      display: flex;
      justify-content: space-between;

      .fare-container {
        display: flex;
        align-items: center;
        font-size: 1.125rem;
      }

      a {
        display: flex;
        align-items: center;
        text-decoration: none;
        font-size: $font-size-normal;
      }

      .ticket-description {
        display: flex;
        color: #fff;
      }

      .ticket-identifier {
        @include font-medium;

        color: $black;
        padding-right: 6px;
      }
    }
  }
}

.zone-ticket {
  &.purchase {
    color: #ffff;
    letter-spacing: -0.03em;
    line-height: 22px;
    text-align: center;
  }
}

